# chess-maths-viewer

./: .gitignore  CHANGELOG.md  CLAUDE.md  README.md  index.html  lichess_pgn_2026.04.15_lichess_AI_level_1_vs_lemonforest.eo9BSVgI.7z  package-lock.json  package.json  pyproject.toml  single_lichess_pgn_2026.04.15_lichess_AI_level_1_vs_lemonforest.eo9BSVgI.7z  sweep_chain_lichess_drnykterstein_2026-04-14_N10.7z  vitest.config.mjs
.github/workflows/: ci.yml
css/: viewer.css
dataset/: .gitattributes  index.json  lichess_broadcast_2022-11.7z  single_lichess_pgn_2026.04.15_lichess_AI_level_1_vs_lemonforest.eo9BSVgI.7z  sweep_chain_lichess_ashchess_2026-04-21_N50.7z  sweep_chain_lichess_drnykterstein_2026-04-14_N10.7z  sweep_hf_2026-04-20_N50.7z
js/: app.js  board.js  charts.js  chess-overlay.js  fiber-overlay.js  loader.js  lru.js  opfs.js  othello-board.js  spectral.js  virtual-table.js
othello/: __init__.py  _bitboard.py  svg.py
scripts/: build-dataset-index.mjs
tests/: test_board.py  test_svg.py
tests-js/: lru.test.js  opfs.test.js  setup.js  smoke-large-corpus.test.js  spectral.test.js  virtual-table.test.js
