[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "othello"
version = "0.1.0"
description = "Lightweight Othello (Reversi) library mirroring the python-chess API, backed by 64-bit bitboards."
requires-python = ">=3.10"
readme = "README.md"
license = { text = "MIT" }

[project.optional-dependencies]
dev = ["pytest>=7"]

[tool.setuptools]
packages = ["othello"]
